Now able to view all details of subject (for Admin).

--- a/Onlineexam/WebContent/index.html
+++ b/Onlineexam/WebContent/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<title>First</title>
+	<title>Something went wrong.</title>
 </head>
 <body>
-asdad
+Something went wrong.
 
 </body>
 </html>
